All changes Done

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Encryption Tool</title>
+  <title>AES Encryption Tool</title>
   <link rel="stylesheet" href="style.css">
+
+  <!-- CryptoJS Library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
 <body>
 
@@ -20,67 +23,37 @@
 
         <div class="toggle">
           <label>
-            <input type="radio" name="code" value="encode" checked>
-            Encode
+            <input type="radio" name="mode" value="encrypt" checked>
+            Encrypt
           </label>
           <label>
-            <input type="radio" name="code" value="decode">
-            Decode
+            <input type="radio" name="mode" value="decrypt">
+            Decrypt
           </label>
-        </div>
-
-        <div class="inputs-row">
-          <div>
-            <label>Shift Key</label>
-            <input type="number" id="shift-input" value="3">
-          </div>
-
-          <div>
-            <label>Modulo</label>
-            <input type="number" id="mod-input" value="36">
-          </div>
         </div>
 
         <div class="full-width">
-          <label>Alphabet</label>
-          <input type="text" id="alphabet-input"
-            value="abcdefghijklmnopqrstuvwxyz0123456789">
+          <label>Secret Key</label>
+          <input type="text" id="secret-key" placeholder="Enter secret key" required>
         </div>
 
-        <div class="inputs-row">
-          <div>
-            <label>Letter Case</label>
-            <select id="letter-case">
-              <option value="1">Maintain</option>
-              <option value="2">Lowercase</option>
-              <option value="3">Uppercase</option>
-            </select>
-          </div>
-
-          <div>
-            <label>Foreign Chars</label>
-            <select id="foreign-chars">
-              <option value="1">Remove</option>
-              <option value="2">Ignore</option>
-            </select>
-          </div>
-        </div>
-
-        <button type="submit" class="primary-btn">Encrypt</button>
+        <button type="submit" id="action-btn" class="primary-btn">
+          Encrypt
+        </button>
 
       </form>
     </div>
 
-    <!-- Plaintext Box -->
+    <!-- Plain Text Box -->
     <div class="box">
-      <h2>Plaintext</h2>
-      <textarea id="input-text" placeholder="Enter text..."></textarea>
+      <h2>Input</h2>
+      <textarea id="input-text" placeholder="Enter Input..."></textarea>
     </div>
 
-    <!-- Encrypted Box -->
+    <!-- Cipher Text Box -->
     <div class="box">
-      <h2>Encrypted</h2>
-      <textarea id="output-text" placeholder="Output..." readonly></textarea>
+      <h2>Output</h2>
+      <textarea id="output-text" placeholder="Result..." readonly></textarea>
     </div>
 
   </div>
