--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!-- CryptoJS Library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
+
 <body>
 
 <div class="app">
@@ -58,7 +59,13 @@
 
   </div>
 </div>
-
+<!-- ✅ Footer must be here -->
+<footer class="footer">
+  <p>
+    © 2026 Password Encryption Tool | Developed by Hariom Gugale
+  </p>
+</footer>
 <script src="caesar.js"></script>
+
 </body>
 </html>
