--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Data Encryption Tool</title>
+  <title>🔏Data Encryption Tool</title>
   <link rel="stylesheet" href="style.css">
 
   <!-- CryptoJS Library -->
